--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?xcgdog');
-  src:  url('fonts/icomoon.eot?xcgdog#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?xcgdog') format('truetype'),
-    url('fonts/icomoon.woff?xcgdog') format('woff'),
-    url('fonts/icomoon.svg?xcgdog#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?7x9nkk');
+  src:  url('fonts/icomoon.eot?7x9nkk#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?7x9nkk') format('truetype'),
+    url('fonts/icomoon.woff?7x9nkk') format('woff'),
+    url('fonts/icomoon.svg?7x9nkk#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-up:before {
+  content: "\e90c";
+}
 .icon-close:before {
   content: "\e90a";
 }
